# internet_shop

./: .gitignore  README.md  data.json  manage.py  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_options_post_created_at_and_more.py  0003_alter_post_preview_image_alter_post_views.py
blog/templates/blog/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: dbupdate.py
catalog/migrations/: 0001_initial.py  0002_alter_product_category.py  0002_category_created_at.py  0003_alter_product_options.py  0004_alter_product_preview_image.py  0005_contactresponse.py  0006_alter_product_created_at_alter_product_updated_at.py  0007_productversion.py  0008_alter_productversion_product.py  0009_alter_productversion_unique_together.py  0010_product_user.py  0011_product_status.py  0012_alter_product_options.py
catalog/templates/: base.html
catalog/templates/catalog/: base.html  contact_form.html  contact_info.html  contactresponse_form.html  contactsuccess.html  main.html  navbar.html  product_adding_info.html  product_confirm_delete.html  product_detail.html  product_form.html  (+6 more)
catalog/templatetags/: media_template_utils.py
internet_shop/: settings.py  urls.py
services/: catalog_category.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_country_alter_user_telephone_number.py  0003_alter_user_telephone_number.py
(+20 files in other folders)
