[tool.poetry]
name = "internet-shop"
version = "0.1.0"
description = ""
authors = ["Tsurkan <mikh.tsurkan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
psycopg2 = "^2.9.9"
pillow = "^10.1.0"
ipython = "^8.18.1"
pytils = "^0.4.1"
django-sites = "^0.11"
redis = "^5.0.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
